--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           >
             <a></a>
           </div>
-          <div class="btn-bg" style="background-image: url(../img/li/tan.png)">
+          <div class="btn-bg" style="background-image: url(./img/li/tan.png)">
             <a></a>
           </div>
-          <div class="btn-bg" style="background-image: url(../img/li/ino.png)">
+          <div class="btn-bg" style="background-image: url(./img/li/ino.png)">
             <a></a>
           </div>
-          <div class="btn-bg" style="background-image: url(../img/li/zen.png)">
+          <div class="btn-bg" style="background-image: url(./img/li/zen.png)">
             <a></a>
           </div>
         </div>
